# lloydcoin

./: .gitignore  Cargo.toml
node/: Cargo.toml
node/src/: LC.rs  blockchain.rs  main.rs  network.rs  node.rs  node_sharing.rs  server.rs  transaction.rs  update_blockchain.rs  worker.rs
node/src/blockchain/: balance_manager.rs  block.rs  blockchain.rs  blockmap.rs
node/src/http_server/: handlers.rs
node/src/server/: handlers.rs
src/: main.rs
wallet/: Cargo.toml  babel.config.js  index.html  package-lock.json  package.json
wallet/src/: App.vue  encryption.ts  main.rs
wallet/src/components/: Wallet.vue
wallet2/: index.html  package-lock.json  package.json
wallet2/src/: App.vue  main.js
wallet2/src/components/: BlockDetails.vue
wallet2/src/lib/: lloydcoin.ts  wallet.ts
website/: nuxt.config.ts  package.json
website/api/: blockchain.ts  transfer.ts  wallet.ts
website/components/layout/: Header.vue
website/layouts/: default.vue
website/pages/: index.vue
website/pages/transfer/: index.vue
website/pages/wallet/: index.vue
