[package]
name = "lloydcoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "*"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68" }
lazy_static = "1.4.0"
