[package]
name = "lloydcoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "*"
rsa = "*"
rand = "*"
ed25519-dalek = "*"
ws = "*"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.68" }
lazy_static = "1.4.0"
hex = "*"

sha3 = "0.9.1"
#ecdsa = "0.13.3"
k256 = { version = "0.9.6", features = ["ecdsa", "ecdsa-core", "keccak256"] }
